Forks off from https://github.com/mojombo/tpw

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-Welcome to the toolbelt<br />
-<br />
-Still migrating across. You can view my <a href="http://bradwhittington.wordpress.com">blog</a>, see some inspiration at the <a href="http://pocket.toolbelt.co.za">pocket reference</a>, start using my <a href="http://lessfuss.co.za">personal assistant</a> service, follow me on twitter: <a href="http://twitter.com/darb">@darb</a>, or find <a href="https://profiles.google.com/radbrad182/">more of me</a>
+---
+layout: default
+title: The Toolbelt | Brad Whittington
+---
+
+<h1>Welcome to the toolbelt</h1>
+
+<p>Still migrating across. You can view my <a href="http://bradwhittington.wordpress.com">blog</a>, see some inspiration at the <a href="http://pocket.toolbelt.co.za">pocket reference</a>, start using my <a href="http://lessfuss.co.za">personal assistant</a> service, follow me on twitter: <a href="http://twitter.com/darb">@darb</a>, or find <a href="https://profiles.google.com/radbrad182/">more of me</a></p>
