--- a/index.html
+++ b/index.html
@@ -6,3 +6,11 @@ title: The Toolbelt | Brad Whittington
 <h1>Welcome to the toolbelt</h1>
 
 <p>Still migrating across. You can view my <a href="http://bradwhittington.wordpress.com">blog</a>, see some inspiration at the <a href="http://pocket.toolbelt.co.za">pocket reference</a>, start using my <a href="http://lessfuss.co.za">personal assistant</a> service, follow me on twitter: <a href="http://twitter.com/darb">@darb</a>, or find <a href="https://profiles.google.com/radbrad182/">more of me</a></p>
+
+  <h2>Blog Posts</h2>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+
