--- a/tags.html
+++ b/tags.html
@@ -1,29 +1,21 @@
 ---
-layout: default
-title: Categories
+layout: page
+title: Tags
+header: Posts By Tag
+group: navigation
 ---
-<ul>
-{% for category in site.tags %}
-  <li><a href="#{{ category | first }}">{{ category | first }}</a></li>
-{% endfor %}
+{% include JB/setup %}
+
+<ul class="tag_box inline">
+  {% assign tags_list = site.tags %}  
+  {% include JB/tags_list %}
 </ul>
 
-<h2>Articles by Category:</h2>
-<ul>
-{% for category in site.tags %}
-  <li><a name="{{ category | first }}">{{ category | first }}</a>
-    <ul>
-    {% for posts in category %}
-      {% for post in posts %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    {% endfor %}
-    </ul>
-  </li>
+
+{% for tag in site.tags %} 
+  <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
+  <ul>
+    {% assign pages_list = tag[1] %}  
+    {% include JB/pages_list %}
+  </ul>
 {% endfor %}
-</ul>
-{% for post in site.categories.quickstart %}
-<!-- h2><a href=".{{ post.url }}">{{ post.title }}</a></h2 -->
-<!-- {{ post.content }} -->
-{% endfor %}
-Page generated: {{ site.time | date_to_string }}
